JBTM-2185 Re-enable CMR integration test